fix styling on goal column spacing and remove default data from initial state

--- a/src/features/goal-discovery/GoalColumn.less
+++ b/src/features/goal-discovery/GoalColumn.less
@@ -4,8 +4,7 @@
   flex: 1;
   min-width: 330px;
   border: 1px solid rgba(0, 0, 0, .18);
-  margin-right: 24px;
-  margin-bottom: 24px;
+  margin: 0 12px 24px;
 }
 
 .gd-goal-column__wrapper {
