--- a/src/features/goal-discovery/GoalColumns.less
+++ b/src/features/goal-discovery/GoalColumns.less
@@ -4,6 +4,6 @@
   display: flex;
   flex-wrap: wrap;
   flex: 1;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 48px;
 }
