--- a/src/features/goal-discovery/GoalItem.less
+++ b/src/features/goal-discovery/GoalItem.less
@@ -19,6 +19,7 @@
 .gd-goal-item__text {
   flex: 1;
   margin-right: 56px;
+  word-break: break-word;
 }
 
 .gd-goal-item__options-button {
